# RAG_v5

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/rag_crawler/: __init__.py  config.py  crawler.py  main.py
src/rag_crawler/agents/: __init__.py  in_depth_agent.py  logic_rag_agent.py  query_classifier.py  quick_fact_agent.py  response_generator.py
src/rag_crawler/extractors/: __init__.py  docling_extractor.py  document.py
src/rag_crawler/ingestion/: __init__.py  chunker.py  embedder.py  entity_extractor.py  ingest.py  summarizer.py
src/rag_crawler/retrieval/: __init__.py  memory.py  reranker.py  rolling_memory.py  vector_retriever.py
src/rag_crawler/router/: __init__.py  router_graph.py  state.py
src/rag_crawler/tests/: __init__.py
src/rag_crawler/utils/: __init__.py  azure_providers.py  db_utils.py  models.py  providers.py
